--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link src="style.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
     <title>Dataviz-Projet</title>
   </head>
-  <body></body>
+  <body>
+    <canvas id="chart"></canvas>
+  </body>
   <script src="index.js"></script>
 </html>
