graphique sur les années d'experiences + pourcentages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="firstGraph">
-      <canvas id="pie-chart"></canvas>
+      <canvas id="pieChartExperience"></canvas>
     </div>
   </body>
   <script src="index.js"></script>
