ajout du filtre en fonctions des langages (6), mise en place du graphique bar en fonctions de ces données

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <div id="firstGraph">
       <canvas id="pieChartExperience"></canvas>
+      <canvas id="barChartLangages"></canvas>
     </div>
   </body>
-  <script src="index.js"></script>
+  <!--<script src="index.js"></script>-->
+  <script src="langages.js"></script>
 </html>
