--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@
   
   </div>
   </body>
-  <script src="index.js"></script>
+  <script src="experience.js"></script>
   <script src="langages.js"></script>
 </html>
