--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
   
   <body>
     <h1>Choose your career</h1>
-
+    <p id="intro">Hello les dev !<br><br>Lorsqu'on débute (et même plus tard), il est parfois difficile de savoir quel nouveau langage explorer. <br><br>Ici, tu trouveras des informations sur les langages les plus recherchés dans le département de ton choix.<br><br> Tu pourras aussi avoir des infos sur les niveaux d'expérience demandés et les salaires moyens. <br><br>Parcours le site pour décider de ta carrière !</p>
   <div>
     <div id="codePostal">
-    <label id= "dep" for = "departement">Dans quel département habites-tu ?</label> <br>
     <input type = "number" id="departement" name="departement" min = "1" max="974" placeholder="Tape ton numéro de département (ex: 44)">
-    <button>Lancer la recherche</button>
+    <button>Chercher</button>
   </div>
   
     <div class="graph"> 
