--- a/index.html
+++ b/index.html
@@ -96,5 +96,5 @@
   </div>
   </body>
   <script src="experience.js"></script>
-  <script src="langages.js"></script>
+  <!-- <script src="langages.js"></script> -->
 </html>
