ajout 3ieme graph

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <div class="chart">
         <canvas id="ChartLangages" width="300" height="300"></canvas>
       </div>
+      <div class="chart">
+        <canvas id="ChartContrats" width="300" height="300"></canvas>
+      </div>
     </div>
 
 
@@ -99,4 +102,5 @@
   </body>
   <script src="experience.js"></script>
   <script src="langages.js"></script>
+  <script src="typeContrat.js"></script>
 </html>
