nom des graphiques + légendes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <body>
     <h1>Choose your career</h1>
-    <p id="intro">Hello les dev !<br><br>Lorsqu'on débute (et même plus tard), il est parfois difficile de savoir quel nouveau langage explorer. <br><br>Ici, tu trouveras des informations sur les langages les plus recherchés dans le département de ton choix.<br><br> Tu pourras aussi avoir des infos sur les niveaux d'expérience demandés et les salaires moyens. <br><br>Parcours le site pour décider de ta carrière !</p>
+    <p id="intro">Hello les dev !<br><br>Lorsqu'on débute (et même plus tard), il est parfois difficile de savoir quel nouveau langage explorer. <br><br>Ici, tu trouveras des informations sur les langages les plus recherchés dans le département de ton choix.<br><br> Tu pourras aussi avoir des infos sur les niveaux d'expérience demandés et les types de contrats disponible. <br><br>Parcours le site pour décider de ta carrière !</p>
     
     <div id="codePostal">
     <input type = "number" id="departement" name="departement" min = "1" max="974" placeholder="Tape ton numéro de département (ex: 44)">
@@ -21,7 +21,7 @@
   
     <div class="container"> 
       <div class="chart">
-        <canvas id="ChartExperience" width="300" height="300"></canvas>
+        <canvas id="ChartExperience" width="300" height="300" ></canvas>
       </div>
       <div class="chart">
         <canvas id="ChartLangages" width="300" height="300"></canvas>
