ajout 3eme graph et visibilité des pourcentage et heure de la requete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <body>
     <h1>Choose your career</h1>
-    <p id="intro">Hello les dev !<br><br>Lorsqu'on débute (et même plus tard), il est parfois difficile de savoir quel nouveau langage explorer. <br><br>Ici, tu trouveras des informations sur les langages les plus recherchés dans le département de ton choix.<br><br> Tu pourras aussi avoir des infos sur les niveaux d'expérience demandés et les types de contrats disponible. <br><br>Parcours le site pour décider de ta carrière !</p>
+    <p>Hello les dev !<br><br>Lorsqu'on débute (et même plus tard), il est parfois difficile de savoir quel nouveau langage explorer. <br><br>Ici, tu trouveras des informations sur les langages les plus recherchés dans le département de ton choix.<br><br> Tu pourras aussi avoir des infos sur les niveaux d'expérience demandés et les types de contrats disponible. <br><br>Parcours le site pour décider de ta carrière !</p>
     
     <div id="codePostal">
     <input type = "number" id="departement" name="departement" min = "1" max="974" placeholder="Tape ton numéro de département (ex: 44)">
@@ -31,6 +31,7 @@
       </div>
     </div>
 
+    <p>Données récupérées le <span id="date"></p>
 
   <fieldset>
   <legend>Quel est ton niveau d'expérience ?</legend>
