--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <div id="codePostal">
     <input type = "number" id="departement" name="departement" min = "1" max="974" placeholder="Tape ton numéro de département (ex: 44)">
-    <button>Chercher</button>
+    <button id="button">Chercher</button>
     </div>
   
     <div class="container"> 
