probleme graphique reglé

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     </div>
   
     <div class="container"> 
-      <div class="chart">
-        <canvas id="ChartExperience" width="300" height="300" ></canvas>
+      <div class="chart" id="chart1">
+        
       </div>
-      <div class="chart">
-        <canvas id="ChartLangages" width="300" height="300"></canvas>
+      <div class="chart" id="chart2">
+
       </div>
-      <div class="chart">
-        <canvas id="ChartContrats" width="300" height="300"></canvas>
+      <div class="chart" id="chart3">
+
       </div>
     </div>
 
