--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <div class="chart" id="chart3">
 
       </div>
+      <div class="chart" id="chart4">
+
+      </div>
+    </div>
+    
     </div>
 
     <p>Données récupérées le <span id="date"></p>
@@ -104,4 +109,5 @@
   <script src="experience.js"></script>
   <script src="langages.js"></script>
   <script src="typeContrat.js"></script>
+  <script src="framework.js"></script>
 </html>
