--- a/index.html
+++ b/index.html
@@ -39,19 +39,14 @@
     </div>
   
     <div class="container"> 
-      <div class="chart" id="chart1">
-        
-      </div>
-      <div class="chart" id="chart2">
-
-      </div>
-      <div class="chart" id="chart3">
-
-      </div>
-      <div class="chart" id="chart4">
-
-      </div>
-    </div>
+      <ul>
+      <div class="chart" id="chart1"></div>
+      <div class="chart" id="chart2"></div></ul>
+      <br><ul>
+      <div class="chart" id="chart3"></div>
+      <div class="chart" id="chart4"></div>
+      </ul>
+  </div>
     
     </div>
 
