--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
       </div>
     </div>
     
+    <div><button id="buttonByDpt">voir graphique departement</button></div>
+    
+    <div class="chart" id="chart5">
+
     </div>
+
+  </div>
 
     <p> Dernière mise à jour des données <span id="date"></span> via l'API Pôle Emploi</p>
 
@@ -66,4 +72,5 @@
   <script src="langages.js"></script>
   <script src="typeContrat.js"></script>
   <script src="framework.js"></script>
+  <script src="departement.js"></script>
 </html>
