--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>CHOOSE YOUR CAREER</h1>
     </header>
 
-    <p class="description">Hello les dev ! Lorsqu'on débute (et même plus tard), il est parfois difficile de savoir quel nouveau langage explorer. <br><br>Ici, tu trouveras des informations sur les langages les plus recherchés dans le département de ton choix.<br><br> Tu pourras aussi avoir des infos sur les niveaux d'expérience demandés et les types de contrats disponible. <br><br>Parcours le site pour décider de ta carrière !</p>
+    <p class="description">Hello les dev ! Lorsqu'on débute (et même plus tard), il est parfois difficile de savoir quel nouveau langage explorer. <br><br>Ici, tu trouveras des informations sur les langages les plus recherchés dans le département de ton choix.<br><br> Tu pourras aussi avoir des infos sur les niveaux d'expérience demandés et les types de contrats disponibles. <br><br>Parcours le site pour décider de ta carrière !</p>
 
     <div class="filtres">
     <input type = "text" id="departement" name="departement" placeholder="Tape ton numéro de département (ex: 44)">
@@ -48,10 +48,6 @@
       </ul>
   </div>
 
-  <div><button id="buttonByDpt">Voir le graphique par département</button></div>
-  <div class="chart" id="chart4"></div>
-
-    </div>
 
     <p> Dernière mise à jour des données <span id="date"></span> via l'API Pôle Emploi</p>
 
@@ -64,5 +60,5 @@
   <script src="langages.js"></script>
   <script src="typeContrat.js"></script>
   <script src="framework.js"></script>
-  <script src="departement.js"></script>
+
 </html>
